# simple-status-page

./: .dockerignore  .gitignore  CHANGELOG.md  Cargo.toml  Dockerfile  README.md  compose.yaml  compose.yml  config.toml.example  config_dev_example.toml  config_example.toml  docker-compose.yml
.github/workflows/: ci.yml  latest-docker-image.yml  lint-backend.yml  lint-frontend.yml
frontend/: .dockerignore  .prettierrc  README.md  angular.json  eslint.config.js  package.json  pnpm-lock.yaml  svelte.config.js
frontend/src/: app.html  index.html  styles.scss
frontend/src/app/: app-header.ts  app.html  app.scss  app.ts  data-service.ts
frontend/src/environments/: environment.development.ts  environment.ts
frontend/src/lib/: dataprovider.ts  main.css
frontend/src/lib/components/: PageFooter.svelte  PageHeader.svelte  StatusEntry.svelte  StatusIcon.svelte  StatusList.svelte  StatusOverview.svelte
frontend/src/routes/: +error.svelte  +page.svelte  +page.ts
frontend/src/status/: status-dash.html  status-dash.scss  status-dash.ts  status-entry.html  status-entry.scss  status-entry.ts  status-icon.ts  status-list.html  status-list.scss  status-list.ts
src/: app_config.rs  cache.rs  db.rs  endpoints.rs  lib.rs  main.rs  watcher.rs
