[package]
name = "simple-status-page"
version = "0.7.0"
edition = "2021"
authors = ["Simon Stefan Barth"]
description = "A simple status page web app"
license = "AGPL-3.0-or-later"
repository = "https://github.com/Data5tream/simple-status-page/"

[lints.clippy]
pedantic = "warn"

[dependencies]
actix-cors = "0.7.0"
actix-files = "0.6.2"
actix-rt = "2.8.0"
actix-web = "4"
config = { version = "0.14.0", features = ["toml"] }
fern = "0.6.2"
log = "0.4.17"
serde = { version = "1.0", features = ["derive"] }
time = { version = "0.3.20", features = ["formatting", "serde", "serde-human-readable"] }
reqwest = { version = "0.12.2", features = ["json"] }
sled = "0.34.7"
bincode = "1.3.3"
